# pv-fleet-health

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  config_example.yaml  environment.yml  pyproject.toml
notebooks/: 00_smoke_test.ipynb  01_ingest_and_catalog.ipynb  02_timebase_resample_dq.ipynb
src/pv_fleet_health/: __init__.py  anomalies.py  config.py  dq.py  events.py  fleet.py  io.py  irradiance_qc.py  kpi.py  losses.py  mapping.py  model.py  paths.py  plant.py  plots.py  scada_headers.py  scada_reshape.py  timebase.py  utils.py
src/pv_fleet_health.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
